# sqlite-wasm-connector

./: CHANGELOG.md  Cargo.toml  Config.toml  README.md  build.sh  rust-toolchain.toml  sqlite3.wit
.github/: renovate.json
.github/release-please/: config.json
.github/workflows/: ci.yml  e2e.yml  release.yml  run-tests.yml  snapshot.yml  tests.yml
leak_launcher/: Cargo.toml  Config_spell.toml  Config_test.toml  main.rs
leak_launcher/artifacts/: leak_test.wasm  spell.wasm  sqlite3.wasm
leak_launcher/spell_service/tmp/: spell.sqlite
leak_launcher/test_service/tmp/: db-1.sqlite  db-2.sqlite  db-3.sqlite  db-3.sqlite-journal  db-4.sqlite  db-4.sqlite-journal  db-5.sqlite  db-5.sqlite-journal  db.sqlite  dbb.sqlite  dbb.sqlite-journal  spell.sqlite
leak_test/: main.rs  schema.rs
src/: connection.rs  cursor.rs  it_generator.rs  lib.rs  statement.rs  test.rs
src/sqlite3_connector/: import_functions.rs
tests/: lib.rs  tests.rs
