[package]
name = "marine-sqlite-connector"
version = "0.8.0"
license = "Apache-2.0/MIT"
authors = [
    "Daniel Dulaney <ddy@vitronic.com>",
    "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jake Kerr <kodafox@gmail.com>",
    "Jayson Reis <santosdosreis@gmail.com>",
    "Pierre Krieger <pierre.krieger1708@gmail.com>",
    "Sean Klein <seanmarionklein@gmail.com>",
    "Sophie Tauchert <999eagle@999eagle.moe>",
    "Tomoki Aonuma <uasi@uasi.jp>",
    "Yorhel <git@yorhel.nl>",
]
description = "The package provides an interface to SQLite."
documentation = "https://docs.rs/sqlite"
homepage = "https://github.com/stainless-steel/sqlite"
repository = "https://github.com/stainless-steel/sqlite"
readme = "README.md"
categories = ["api-bindings", "database"]
keywords = ["database"]
edition = "2018"

[lib]
name = "marine_sqlite_connector"
path = "src/lib.rs"

[[bin]]
name = "it_generator"
path = "src/it_generator.rs"

[[bin]]
name = "leak_test"
path = "leak_test/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
marine-rs-sdk = "0.7.0"
eyre = "0.6.8"
cid = "0.8.6"
thiserror = "1.0.37"
fstrings = "0.2.3"
serde = "1.0.149"
serde_json = "1.0.89"
bytesize = "1.1.0"

[dev-dependencies]
temporary = "0.6"
marine-rs-sdk-test = "0.8.2"
