[package]
name = "leak_launcher"
version = "0.7.0"
license = "Apache-2.0/MIT"
authors = [
    "Daniel Dulaney <ddy@vitronic.com>",
    "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jake Kerr <kodafox@gmail.com>",
    "Jayson Reis <santosdosreis@gmail.com>",
    "Pierre Krieger <pierre.krieger1708@gmail.com>",
    "Sean Klein <seanmarionklein@gmail.com>",
    "Sophie Tauchert <999eagle@999eagle.moe>",
    "Tomoki Aonuma <uasi@uasi.jp>",
    "Yorhel <git@yorhel.nl>",
]
description = "The package provides an interface to SQLite."
documentation = "https://docs.rs/sqlite"
homepage = "https://github.com/stainless-steel/sqlite"
repository = "https://github.com/stainless-steel/sqlite"
readme = "README.md"
categories = ["api-bindings", "database"]
keywords = ["database"]
edition = "2018"

[[bin]]
name = "leak_launcher"
path = "main.rs"

[dependencies]
marine-rs-sdk = "0.7.0"
fluence-app-service = "0.23.1"
toml = "0.7.2"
serde = "1.0.152"
serde_json = "1.0.93"
